--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "axios": "^0.26.0",
     "core-js": "^3.6.5",
     "element-ui": "^2.4.5",
+    "less-loader": "^6.0.0",
+    "mockjs": "^1.1.0",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
@@ -20,6 +22,7 @@
     "@vue/cli-plugin-vuex": "~4.5.15",
     "@vue/cli-service": "~4.5.15",
     "babel-plugin-component": "^1.1.1",
+    "less": "^4.1.2",
     "vue-cli-plugin-element": "^1.0.1",
     "vue-template-compiler": "^2.6.11"
   }
