--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "core-js": "^3.6.5",
     "element-ui": "^2.4.5",
     "less-loader": "^6.0.0",
+    "lodash": "^4.17.21",
     "mockjs": "^1.1.0",
     "vue": "^2.6.11",
+    "vue-quill-editor": "^3.0.6",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
   },
@@ -24,6 +26,7 @@
     "babel-plugin-component": "^1.1.1",
     "less": "^4.1.2",
     "vue-cli-plugin-element": "^1.0.1",
+    "vue-table-with-tree-grid": "^0.2.4",
     "vue-template-compiler": "^2.6.11"
   }
 }
